--- a/source/_posts/2015.md
+++ b/source/_posts/2015.md
@@ -3,14 +3,46 @@ date: 2015-12-31 21:09:54
 categories: [水岸风堤, 流光回梦]
 tags: [百味杂谈]
 ---
+![](/img/2015/icon.jpg)
 
 就这样，又是一年过去了……时光如梭，真是短暂……我的2015，今日来好好跟你告别。
 
 对我来说，2015记住的满满都是工作，加班，Coding，提测，发布，上线……所以，应该算是携程年了。
 
+![](/img/2015/ctrip_00.jpg)
+![](/img/2015/ctrip_01.jpg)
+
+![](/img/2015/ctrip_08.jpg)
+![](/img/2015/ctrip_12.jpg)
+![](/img/2015/ctrip_21.jpg)
+![](/img/2015/ctrip_100.jpg)
+
 在市场营销部，我收获了许许多多的果实，最重要的就是一起奋战的可爱的伙伴们，在活动组，每天都是那么的快乐，总像身在梦里的家乡一般……
 
+![](/img/2015/guys_00.jpg)
+![](/img/2015/guys_01.jpg)
+![](/img/2015/guys_02.jpg)
+![](/img/2015/guys_03.jpg)
+![](/img/2015/guys_04.jpg)
+![](/img/2015/guys_05.jpg)
+![](/img/2015/guys_10.jpg)
+![](/img/2015/guys_12.jpg)
+![](/img/2015/guys_13.jpg)
+![](/img/2015/guys_15.jpg)
+![](/img/2015/guys_16.jpg)
+![](/img/2015/guys_17.jpg)
+![](/img/2015/guys_19.jpg)
+![](/img/2015/guys_20.jpg)
+![](/img/2015/guys_21.jpg)
+![](/img/2015/guys_22.jpg)
+![](/img/2015/guys_23.jpg)
+![](/img/2015/guys_24.jpg)
+![](/img/2015/guys_25.jpg)
+![](/img/2015/guys_99.jpg)
+
 通过自己不断的努力与大家的认可，成为了团队中得骨干，得到了晋升，涨了薪资，还把室友也拉拢到了这个大Team里来，仔细回味下，内心很欣慰很满足……
+
+![](/img/2015/works.jpg)
 
 由于互联网公司的弹性工作制，携程也把我惯坏了，生活作息一直不规律，早上起得晚，晚上更是睡的晚，这样对身体很不好，体重也是一直飙升……这点，我感到非常遗憾……但是如此的一天一天，我没有工作的感觉，只有生活的感觉，这样的24小时就是一切了，另人忘我……当注意到日历时，就是一个月过去了，想到可以领到工资了，然后不用吃土了，就觉得幸福……
 
@@ -18,9 +50,16 @@ tags: [百味杂谈]
 
 性子变的恬淡了很多很多，人也同样的更加开朗了，跟谁都可以成为好朋友，一个话题都能聊的很久，但同时又变得坚韧了很多，在压力中承载着前进，也更不怕吃苦了……尽管，经常还会被小伙伴们嘲笑说幼稚……其实，说到底，是怕自己失去了这点赤子之心，带着城府步入到大叔的心境下，此时此刻，想来还是觉得不想这样去活……曾几何时，同学录里就被他们写道，活在自己的世界里，自由自在的飞翔……嗯，我现在依然觉得这是对自己最大的肯定了！正所谓，不忘初心……
 
-今年去武汉考了学，第二次还有佳人陪伴去故地重游……夫复何求？
+今年，也达成了夙愿，去武汉考了学，佳人陪伴去故地重游……夫复何求？
+
+![](/img/2015/wuhan_00.jpg)
+![](/img/2015/wuhan_01.jpg)
+![](/img/2015/wuhan_02.jpg)
+![](/img/2015/wuhan_09.jpg)
 
 一年365天，想到《时间的神迹》里，说时间是依赖热力学中得熵值来计算的，熵值低，可变性就高。对于万物来说，皆有枯荣流转，人更是如此……在城市里公车中穿梭的时候，常常希望让时间凝固在这一刻……所有人都不再长大，世界永远保持着这种状态，所有人都不要变……
+
+![](/img/2015/sky.jpg)
 
 也只能想想而已……
 
@@ -30,17 +69,33 @@ tags: [百味杂谈]
 
 如今，每天六点起床，两个小时去上班，两个小时去下班……不得不说，人类对环境的适应能力真是强的可怕，尤其是习惯这种东西……新公司，新团队，一切都还显得那么陌生，以后的日子要它们来陪伴了……
 
+![](/img/2015/pingan.jpg)
+![](/img/2015/pingan_01.jpg)
+
 感恩自己的2015，期待自己的2016……在勤奋与执着中，在梦想里，希望自己能收获更多更多更多更多……
 
 愿远方与身边的亲人们，小伙伴们，同事们，每个陌生的人们都能在2016里平安健康快乐！
 
-再见了，2015！我会时刻想起你的！也预祝自己生日快乐！
+你好，2016！再见了，2015！我会时刻想起你的！也预祝自己生日快乐！
 
-PS.《OnePiece》、《东京食尸鬼》、《琅琊榜》、《伪装者》，谢谢你们给我的感动与快乐！
+
+PS.《OnePiece》、《东京食尸鬼》、《琅琊榜》、《伪装者》，谢谢你们给我的感动与快乐！I love you！
+
+PPS.下面就晒晒自己的玩具们和2015时的傻样儿……
+
+![](/img/2015/shouban_01.jpg)
+![](/img/2015/shouban_02.jpg)
+![](/img/2015/shouban_03.jpg)
+![](/img/2015/shouban_07.jpg)
+
+
+![](/img/2015/me_07.jpg)
+![](/img/2015/me_99.jpg)
+
 
 商伯阳
 
-2015.12.31
+2015.12.31 23:12
 
 
 
