--- a/source/_posts/2015.md
+++ b/source/_posts/2015.md
@@ -3,7 +3,7 @@ date: 2015-12-31 21:09:54
 categories: [水岸风堤, 流光回梦]
 tags: [百味杂谈]
 ---
-![](/img/2015/icon.jpg)
+![](/img/2015/sky.jpg)
 
 就这样，又是一年过去了……时光如梭，真是短暂……我的2015，今日来好好跟你告别。
 
@@ -11,7 +11,6 @@ tags: [百味杂谈]
 
 ![](/img/2015/ctrip_00.jpg)
 ![](/img/2015/ctrip_01.jpg)
-
 ![](/img/2015/ctrip_08.jpg)
 ![](/img/2015/ctrip_12.jpg)
 ![](/img/2015/ctrip_21.jpg)
@@ -27,20 +26,16 @@ tags: [百味杂谈]
 ![](/img/2015/guys_05.jpg)
 ![](/img/2015/guys_10.jpg)
 ![](/img/2015/guys_12.jpg)
-![](/img/2015/guys_13.jpg)
 ![](/img/2015/guys_15.jpg)
-![](/img/2015/guys_16.jpg)
 ![](/img/2015/guys_17.jpg)
 ![](/img/2015/guys_19.jpg)
 ![](/img/2015/guys_20.jpg)
 ![](/img/2015/guys_21.jpg)
-![](/img/2015/guys_22.jpg)
 ![](/img/2015/guys_23.jpg)
-![](/img/2015/guys_24.jpg)
 ![](/img/2015/guys_25.jpg)
 ![](/img/2015/guys_99.jpg)
 
-通过自己不断的努力与大家的认可，成为了团队中得骨干，得到了晋升，涨了薪资，还把室友也拉拢到了这个大Team里来，仔细回味下，内心很欣慰很满足……
+通过自己不断的努力与大家的认可，成为了团队中的骨干，得到了晋升，涨了薪资，还把室友也拉拢到了这个大Team里来，仔细回味下，内心很欣慰很满足……
 
 ![](/img/2015/works.jpg)
 
@@ -59,46 +54,30 @@ tags: [百味杂谈]
 
 一年365天，想到《时间的神迹》里，说时间是依赖热力学中得熵值来计算的，熵值低，可变性就高。对于万物来说，皆有枯荣流转，人更是如此……在城市里公车中穿梭的时候，常常希望让时间凝固在这一刻……所有人都不再长大，世界永远保持着这种状态，所有人都不要变……
 
-![](/img/2015/sky.jpg)
-
 也只能想想而已……
 
 就这样一直被生活拖着前进吧，带着生命最原始的悲伤与不断愈合中的微笑，去感受去珍惜去见证时间与生命。
 
-为了成长，为了生活，我告别了自己在携程的安乐窝，选择了平安科技……领导们诚挚的挽留，让我在纠结与挣扎中依依不舍得离开了大家……我想，如果未来有机会，我还是会选择回去……自己恋旧这个性子，怕是到死也改不了了。
+为了成长，为了生活，我告别了自己在Ctrip的安乐窝，选择了PA……Ctrip领导们诚挚的挽留，让我在纠结与挣扎中依依不舍……我想，如果未来有机会，我还是会选择回去……恋旧这个性子，怕是到死也改不了了。
 
 如今，每天六点起床，两个小时去上班，两个小时去下班……不得不说，人类对环境的适应能力真是强的可怕，尤其是习惯这种东西……新公司，新团队，一切都还显得那么陌生，以后的日子要它们来陪伴了……
 
-![](/img/2015/pingan.jpg)
 ![](/img/2015/pingan_01.jpg)
 
-感恩自己的2015，期待自己的2016……在勤奋与执着中，在梦想里，希望自己能收获更多更多更多更多……
+感恩自己的2015，期待自己的2016，能够在勤奋与执着中，收获的更多。
 
 愿远方与身边的亲人们，小伙伴们，同事们，每个陌生的人们都能在2016里平安健康快乐！
 
 你好，2016！再见了，2015！我会时刻想起你的！也预祝自己生日快乐！
 
+PS.《OnePiece》、《东京食尸鬼》、《琅琊榜》、《伪装者》，谢谢你们给我的感动与快乐！
 
-PS.《OnePiece》、《东京食尸鬼》、《琅琊榜》、《伪装者》，谢谢你们给我的感动与快乐！I love you！
+PPS.再晒晒自己的玩具们!
 
-PPS.下面就晒晒自己的玩具们和2015时的傻样儿……
-
-![](/img/2015/shouban_01.jpg)
-![](/img/2015/shouban_02.jpg)
-![](/img/2015/shouban_03.jpg)
 ![](/img/2015/shouban_07.jpg)
-
-
-![](/img/2015/me_07.jpg)
-![](/img/2015/me_99.jpg)
-
 
 商伯阳
 
 2015.12.31 23:12
 
-
-
-
-
-
+![](/img/2015/icon.jpg)
