--- a/source/_posts/2015.md
+++ b/source/_posts/2015.md
@@ -9,35 +9,33 @@ tags: [百味杂谈]
 
 对我来说，2015记住的满满都是工作，加班，Coding，提测，发布，上线……所以，应该算是携程年了。
 
-![](/img/2015/ctrip_00.jpg)
-![](/img/2015/ctrip_01.jpg)
-![](/img/2015/ctrip_08.jpg)
-![](/img/2015/ctrip_12.jpg)
-![](/img/2015/ctrip_21.jpg)
-![](/img/2015/ctrip_100.jpg)
+![凌空的辉煌](/img/2015/ctrip_00.jpg)
+![下午的宁静](/img/2015/ctrip_01.jpg)
+![余晖炫目](/img/2015/ctrip_08.jpg)
+![游游船长](/img/2015/ctrip_12.jpg)
+![难得那晚只留我一人奋战](/img/2015/ctrip_21.jpg)
+![大家积极的送我工牌](/img/2015/ctrip_100.jpg)
 
 在市场营销部，我收获了许许多多的果实，最重要的就是一起奋战的可爱的伙伴们，在活动组，每天都是那么的快乐，总像身在梦里的家乡一般……
 
-![](/img/2015/guys_00.jpg)
-![](/img/2015/guys_01.jpg)
-![](/img/2015/guys_02.jpg)
-![](/img/2015/guys_03.jpg)
-![](/img/2015/guys_04.jpg)
-![](/img/2015/guys_05.jpg)
-![](/img/2015/guys_10.jpg)
-![](/img/2015/guys_12.jpg)
-![](/img/2015/guys_15.jpg)
-![](/img/2015/guys_17.jpg)
-![](/img/2015/guys_19.jpg)
-![](/img/2015/guys_20.jpg)
-![](/img/2015/guys_21.jpg)
-![](/img/2015/guys_23.jpg)
-![](/img/2015/guys_25.jpg)
-![](/img/2015/guys_99.jpg)
+![午间小憩](/img/2015/guys_01.jpg)
+![午间小憩](/img/2015/guys_02.jpg)
+![加班……也要三国杀](/img/2015/guys_03.jpg)
+![开会……也要三国杀](/img/2015/guys_04.jpg)
+![Hackthon的24小时争霸赛](/img/2015/guys_10.jpg)
+![乒乓大战](/img/2015/guys_12.jpg)
+![小组桌上足球夺冠](/img/2015/guys_15.jpg)
+![周会中的庆祝生日](/img/2015/guys_17.jpg)
+![团队建设的苏州马拉松](/img/2015/guys_19.jpg)
+![BOSS传达上级精神](/img/2015/guys_20.jpg)
+![其实蛋糕是假的](/img/2015/guys_21.jpg)
+![马拉松起航](/img/2015/guys_23.jpg)
+![在美景中不忘留下美好](/img/2015/guys_25.jpg)
+![离别的聚会](/img/2015/guys_99.jpg)
 
 通过自己不断的努力与大家的认可，成为了团队中的骨干，得到了晋升，涨了薪资，还把室友也拉拢到了这个大Team里来，仔细回味下，内心很欣慰很满足……
 
-![](/img/2015/works.jpg)
+![勤奋的小伙伴们](/img/2015/works.jpg)
 
 由于互联网公司的弹性工作制，携程也把我惯坏了，生活作息一直不规律，早上起得晚，晚上更是睡的晚，这样对身体很不好，体重也是一直飙升……这点，我感到非常遗憾……但是如此的一天一天，我没有工作的感觉，只有生活的感觉，这样的24小时就是一切了，另人忘我……当注意到日历时，就是一个月过去了，想到可以领到工资了，然后不用吃土了，就觉得幸福……
 
@@ -47,10 +45,9 @@ tags: [百味杂谈]
 
 今年，也达成了夙愿，去武汉考了学，佳人陪伴去故地重游……夫复何求？
 
-![](/img/2015/wuhan_00.jpg)
-![](/img/2015/wuhan_01.jpg)
-![](/img/2015/wuhan_02.jpg)
-![](/img/2015/wuhan_09.jpg)
+![夜晚抵达](/img/2015/wuhan_00.jpg)
+![熟悉的校园](/img/2015/wuhan_02.jpg)
+![夜市的淘宝](/img/2015/wuhan_09.jpg)
 
 一年365天，想到《时间的神迹》里，说时间是依赖热力学中得熵值来计算的，熵值低，可变性就高。对于万物来说，皆有枯荣流转，人更是如此……在城市里公车中穿梭的时候，常常希望让时间凝固在这一刻……所有人都不再长大，世界永远保持着这种状态，所有人都不要变……
 
@@ -62,7 +59,7 @@ tags: [百味杂谈]
 
 如今，每天六点起床，两个小时去上班，两个小时去下班……不得不说，人类对环境的适应能力真是强的可怕，尤其是习惯这种东西……新公司，新团队，一切都还显得那么陌生，以后的日子要它们来陪伴了……
 
-![](/img/2015/pingan_01.jpg)
+![PA张江总部](/img/2015/pingan_01.jpg)
 
 感恩自己的2015，期待自己的2016，能够在勤奋与执着中，收获的更多。
 
@@ -70,14 +67,12 @@ tags: [百味杂谈]
 
 你好，2016！再见了，2015！我会时刻想起你的！也预祝自己生日快乐！
 
-PS.《OnePiece》、《东京食尸鬼》、《琅琊榜》、《伪装者》，谢谢你们给我的感动与快乐！
+PS.《OnePiece》《东京食尸鬼》《琅琊榜》《伪装者》，谢谢你们给我的感动！
 
-PPS.再晒晒自己的玩具们!
+PPS.晒一下自己的玩具们！
 
-![](/img/2015/shouban_07.jpg)
+![强袭自由&圣盾Gundam](/img/2015/shouban_07.jpg)
 
 商伯阳
 
 2015.12.31 23:12
-
-![](/img/2015/icon.jpg)
