--- a/source/_posts/2015.md
+++ b/source/_posts/2015.md
@@ -37,7 +37,7 @@ tags: [百味杂谈]
 
 ![勤奋的小伙伴们](/img/2015/works.jpg)
 
-由于互联网公司的弹性工作制，携程也把我惯坏了，生活作息一直不规律，早上起得晚，晚上更是睡的晚，这样对身体很不好，体重也是一直飙升……这点，我感到非常遗憾……但是如此的一天一天，我没有工作的感觉，只有生活的感觉，这样的24小时就是一切了，另人忘我……当注意到日历时，就是一个月过去了，想到可以领到工资了，然后不用吃土了，就觉得幸福……
+由于互联网公司的弹性工作制，携程也把我惯坏了，生活作息一直不规律，早上起得晚，晚上更是睡的晚，这样对身体很不好，体重也是一直飙升……这点，我感到非常遗憾……但是如此的一天一天，我没有工作的感觉，只有生活的感觉，这样的24小时就是一切了，令人忘我……当注意到日历时，就是一个月过去了，想到可以领到工资了，然后不用吃土了，就觉得幸福……
 
 仔细想想，人，真的是会变的，尤其是热血男儿！
 
@@ -76,3 +76,5 @@ PPS.晒一下自己的玩具们！
 商伯阳
 
 2015.12.31 23:12
+
+![](/img/2015/icon.jpg)
